testCases/parserTestCases/correct/returnStmt.cs16
/*
    This tests var name
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    if( x = 1 )
        return;
    if(x=2) return x;
    if(x=2) return -x;
    if(x=2) return 1;
    if(x=2) return x+1;
    if(x=2) return x+x;
    if(x=2) return x*x;
    if(x=2) return x-x;
    if(x=2) return x;

}