testCases/parserTestCases/error/uminus.cs16
/*
    This test add the incorrect simple where a - should be
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(void){
    int x;
    x := ' 1;
}